Bad Counter not scalable

--- a/React/index.html
+++ b/React/index.html
@@ -7,7 +7,7 @@
     <body>
         <button id="increment-btn">+1</button>
         <div id="count-display">0</div>
-
-        <script>src="index.js"</script>
+        
+        <script src="index.js"></script>
     </body>
 </html>
