Using react, JSX, and babble

--- a/React/index.html
+++ b/React/index.html
@@ -3,11 +3,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Learning React</title>
+        <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+        <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
     </head>
-    <body>
-        <button id="increment-btn">+1</button>
-        <div id="count-display">0</div>
-        
-        <script src="index.js"></script>
+    <body>    
+        <div id="root"></div>
+
+        <script type ="text/babel" src="index.js"></script>
     </body>
 </html>
